# logger-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/file/single-thread/: two-threads.rs
examples/file_and_stdout/: different-levels.rs  generic.rs
examples/stdout/separate-thread/: big-buf-capacity.rs  no-thread-names.rs  thread-ids.rs  thread-names.rs
examples/stdout/single-thread/: big-buf-capacity.rs  local-timestamps.rs  utc-timestamps.rs  with-target.rs
src/: lib.rs  writer.rs
